# Sports-predictions

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  profile_mlb.py  profile_sync.py  pyproject.toml  test_tarpit.py  test_tarpit2.py
backend/alembic/: README  env.py
backend/alembic/versions/: 001_initial_schema.py
backend/docs/: ml_algorithm_overview.md  ml_phase_inference.md  ml_phase_training.md
backend/docs/performance/: BASELINE.md  MLB_STATS_API_RATE_LIMITS.md
backend/docs/security/: README.md  SECURITY-AUDIT-REPORT.md  SECURITY-BACKLOG.md  SECURITY-TEST-PROCEDURES.md
backend/sql/: 001_initial_schema.sql  002_game_scores.sql  002_prediction_cache_and_admin.sql  003_pitching_and_starters.sql  004_prediction_evaluation.sql  005_teams_optimization.sql  006_model_versions.sql  007_app_users_and_bets.sql  README.md  schema.txt
backend/src/: benchmark.py
backend/src/app/: __init__.py  main.py
backend/src/app/api/: deps_admin.py  deps_rate_limit.py  deps_user.py
backend/src/app/cli/: __init__.py  backfill_history.py  create_admin.py  rebuild_feature_snapshots.py
backend/src/app/core/: admin_security.py  config.py  cors_utils.py  exception_handlers.py
backend/src/app/data/: mlb_stadiums.json  mlb_team_abbreviations.py
backend/src/app/db/: db_url.py  session.py
backend/src/app/ml/: features.py  predictor.py  train_from_db.py  training.py
backend/src/app/models/: __init__.py  bets.py  mlb.py
backend/tests/: conftest.py  test_admin_auth_service.py  test_admin_security.py  test_backtest.py  test_config.py  test_db_url.py  test_feature_snapshots.py  test_mlb_client.py  test_mlb_daily_snapshot.py  test_mlb_sync.py  test_model_registry.py  test_prediction_cache.py  test_predictor.py  test_routes_admin_auth.py
backend/tests/fixtures/: schedule_sample.json
(+153 files in other folders)
